<resources>
    <string name="app_name">SmartHome</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="TextView">show</string>
    <string name="enter_name">Enter Email</string>
    <string name="cancel">Cancel</string>
    <string name="attempts_left">"Attempts_left : "</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="reset_password">Reset Password</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="not_registered_register_now">Not Registered ? Register Now !</string>
    <string name="Led">Led</string>
</resources>
